kubernetes/main/apps/external-secrets/external-secrets/bitwarden/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-to-bw
  namespace: external-secrets
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: bitwarden
      app.kubernetes.io/name: bitwarden
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: external-secrets
            app.kubernetes.io/name: external-secrets
            k8s:io.kubernetes.pod.namespace: external-secrets
  egress:
    - toFQDNs:
        - matchName: ${BITWARDEN_URL}
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: api.bitwarden.com
